[project]
name = "pyspark-example"
version = "0.1.0"
description = ""
authors = [
    {name = "Александр Петров",email = "petrov.a.o-86@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (>=3.5.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "pyspark_example.main:run"
